--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,12 +5,12 @@
 
   <div class="field">
     <%= f.label :name %><br />
-    <%= f.email_field :name, autofocus: true, autocomplete: "name" %>
+    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
   </div>
 
     <div class="field">
     <%= f.label :profile_pic %><br />
-    <%= f.email_field :profile_pic %>
+    <%= f.text_field :profile_pic %>
   </div>
 
   <div class="field">
