--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,9 @@
     <title>Tuiter</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    
+    <%# iconos %>
+    <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
+    <%# bootstrap %>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -12,7 +14,6 @@
 
   <body>
 
-<<<<<<< HEAD
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 <div class="container">
   <a class="navbar-brand" href="#">Tuiter</a>
@@ -42,11 +43,5 @@
 
 
 
-=======
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-
-    <%= yield %>
->>>>>>> dea441acba9cf2a2c2ad103170fec04e8ca14dae
   </body>
 </html>
