--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -16,7 +16,18 @@
       <tr>
         <td><%= tweet.content %></td>
         <td><%= tweet.user_id %></td>
+        <td><%= image_tag(tweet.user.profile_pic, size: '64') %></td>
+        <td><%= tweet.likes.count %> <%= (tweet.likes.count) == 1 ? 'Like' : 'Likes'%></td>
         <td><%= link_to 'Show', tweet %></td>
+        <td>
+                <% pre_like = tweet.likes.find { |like| like.user_id == current_user.id} %>
+                <% if pre_like %>
+                    <%= button_to 'Unlike', tweet_like_path(tweet, pre_like), method: :delete %>
+                  <% else %>
+                    <%= button_to 'Like', tweet_likes_path(tweet), method: :post %>
+                <% end %>
+        
+        </td>
         <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
         <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
