--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -10,5 +10,12 @@
   <%= current_user %>
 </p>
 
+<p><%= @tweet.likes.count %> <%= (@tweet.likes.count) == 1 ? 'Like' : 'Likes'%></p>
 <%= link_to 'Edit', edit_tweet_path(@tweet) %> |
 <%= link_to 'Back', tweets_path %>
+
+
+<h5> Usuarios que le gusta este tweet</h5>
+<% @tweet.likes.each do |tweet| %>
+  <p><%= tweet.user %></p>
+<% end %>
