--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,40 @@
-<h2 class="font-pop-light">Sign up</h2>
+<h2 class="my-5">Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
+  <div class="py-4">
     <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+    <%= f.text_field :name, autofocus: true, autocomplete: "name", class:"form-control" %>
   </div>
 
     <div class="field">
     <%= f.label :profile_pic %><br />
-    <%= f.text_field :profile_pic %>
+    <%= f.text_field :profile_pic, class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="py-4">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
+    <%= f.email_field :email, autocomplete: "email", class:"form-control" %>
   </div>
 
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em class="label-min">(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="field py-4">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="actions my-4">
+    <%= f.submit "Sign up", class:"btn btn-blue btn-block" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+</br>
+<!-- <%= render "devise/shared/links" %> -->
