--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,32 +14,55 @@
 
   <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-<div class="container">
-  <a class="navbar-brand" href="#">Tuiter</a>
+<nav class="navbar navbar-expand-lg bg-black-dark mb-5">
+  <div class="container">
+  <%= link_to "Tuitter", root_path, class:"navbar-brand font-pop-bold text-blue-light mr-5"%>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav ml-auto">
+    <div class="navbar-nav font-pop ">
+    <%= link_to root_path, class:"nav-link" do %>
+    <span><i class="lni lni-home mr-2"></i>Home</span>
+    <%end%>
     <% if signed_in? %>
-      <%= link_to "log out", destroy_user_session_path, method: :delete, class:"nav-link" %>
+      <%= link_to destroy_user_session_path, method: :delete, class:"nav-link" do%>
+      <span><i class="lni lni-exit mr-2"></i></i>Log out</span>
+      <%end%>
        <%else%>
-      <%= link_to "log in", new_user_session_path, class:"nav-link" %>
-      <%= link_to "Sign up", new_user_registration_path, class:"nav-link" %>
+      <%= link_to new_user_session_path, class:"nav-link" do%>
+      <span><i class="lni lni-enter mr-2"></i>Log in</span>
+      <%end%>
+      <%= link_to new_user_registration_path, class:"nav-link" do%>
+      <span><i class="lni lni-users mr-2"></i>Sign up</span>
+      <%end%>
     <%end%> 
+    
     </div>
+      <%= link_to "Crea un Tweet!",root_path,  class:"btn btn-blue ml-auto" %>
+    
   </div>
   </div>
 </nav>
-
-<div class="container">
-  <p class="notice"><%= notice %></p> 
-  <p class="alert"><%= alert %></p>
-
-  
-    <%= yield %>
+<div class="container mt-2">
+<% if flash[:notice]%>
+          <div class="col-12 alert alert-primary text-center">
+          <p class="notice my-auto"><i class="lni lni-checkmark-circle mr-4"></i><%= notice %></p>
+          </div> 
+        <%end%>
+        <% if flash[:alert]%>
+          <div class="col-12 alert alert-primary text-center">
+        <p class="alert my-auto"><i class="lni lni-warning mr-4"></i><%= alert %></p>
+        </div> 
+<%end%>
+</div>
+<div class="container d-flex center-div">
+  <div class="row">
+  <div class="col"></div>
+      <div class="col-10 mt-5"><%= yield %></div>
+  <div class="col"></div>
   </div>
+</div>
 
 
 
