--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,66 +1,33 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Tweets</h1>
+<section class="section">
+  <div class="container">
+    <div class="row mb-3">
+      <!--Form for create tweets - only for users -->
+      <% if current_user%>
+      <%= render 'create_tweet', tweet: @tweet %>
+      
+      <%end%>
+      
+    </div>
+    <hr class="hr">
+  </div>
+  
+</section>
 
-<!--Form for create tweets - only for users -->
-<% if current_user%>
-<%= render 'form_index', tweet: @tweet %>
-<%end%>
-<br>
 
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<section class="section">
+  <div class="container">
+    <div class="row">
+      <!--Form for create tweets - only for users -->
+      <%= render 'feed' %>
+      
+    </div>
+  </div>
+</section>
 
-  <tbody>
-    <% @tweets.each do |tweet| %>
-      <tr>
-        <td><%= tweet.content %></td>
-        <td><%= tweet.user.name %></td>
-        <td><%= image_tag(tweet.user.profile_pic, size: '64') %></td>
-        <!--Likes count-->
-        <td><%= tweet.likes.count %> <%= (tweet.likes.count) == 1 ? 'Like' : 'Likes'%></td>
-        <!--Show button -->
-        <td><%= link_to tweet do %>
-        <%= time_ago_in_words(tweet.created_at) %>
-        <%end%></td>
 
-        <!--like button -->
-        <td>  <% if signed_in? %>
-                <% pre_like = tweet.likes.find { |like| like.user_id == current_user.id} %>
-                <% if pre_like %>
-                    <%= link_to tweet_like_path(tweet, pre_like), method: :delete do %>
-                    <span><i class="lni lni-heart-filled"></i></span>
-                    <%end%>
-                  <% else %>
-                    <%= link_to tweet_likes_path(tweet), method: :post do %>
-                    <span><i class="lni lni-heart"></i></span>
-                    <%end%>
-                <% end %>
-                
-                <% end %>
-        
-        </td>
-        <!--Edit button  -->
-        <td><%= link_to edit_tweet_path(tweet) do %>
-        <span><i class="lni lni-pencil-alt"></i></span>
-        <%end%>
-        </td>
-        <!--Destroy button -->
-        <td><%= link_to tweet, method: :delete, data: { confirm: 'Are you sure?' } do %>
-        <span><i class="lni lni-trash"></i></span>
-        <%end%>
-        </td>
-        
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+
+
 
 <br>
 
