--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -20,12 +20,12 @@
     <div class="row">
       <!--Form for create tweets - only for users -->
       <%= render 'feed' %>
-      
     </div>
+    
   </div>
 </section>
 
-
+<%= paginate @tweets %>
 
 
 
