--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Tweet</h1>
+<h2 class="my-1">Editing Tweet</h2>
 
 <%= render 'form', tweet: @tweet %>
 
+<!--
 <%= link_to 'Show', @tweet %> |
 <%= link_to 'Back', tweets_path %>
+-->
