--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,7 +9,7 @@
  * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
- *
+ *= stub "active_admin"
  *= require_tree .
  *= require_self
  */
@@ -180,6 +180,7 @@ label{
     border-color: var(--grey-dark);
     box-shadow: 0px 0px 0px 0px inset, 0px 0px 0px 0px;
 }
+
 
 .form-control-edit {
     padding:10px;
