--- a/app/views/home/_feed.html.erb
+++ b/app/views/home/_feed.html.erb
@@ -42,7 +42,7 @@
 
             <div class="contenido mt-2 mb-3">
             <!--Content -->
-            <%= tweet.content %>
+            <%= tweet.content.html_safe %>
             </div>
 
         <div class="row">
