--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,9 +77,9 @@
 </div>
 <div class="container d-flex center-div">
   <div class="row">
-  <div class="col"></div>
+  <div class="col-2"> <%= render 'profile_card' %></div>
       <div class="col-10 mt-5"><%= yield %></div>
-  <div class="col"></div>
+  <div class="col-1"></div>
   </div>
 </div>
 
