--- a/app/views/home/_feed.html.erb
+++ b/app/views/home/_feed.html.erb
@@ -4,11 +4,18 @@
   <% @tweets.each do |tweet| %>
     <div class="col-2 px-0 d-flex justify-content-end">
     <!--profile_pic -->
-        <%= image_tag(tweet.user.profile_pic, size: '64') %> 
+        <%= image_tag(tweet.user.profile_pic, size: '55') %> 
     </div>
 
     <div class="col-10 content">
+    <!--retweet message  -->
+            <% if tweet.is_retweet?%>
+                <div>                 
+                        <small><i class="lni lni-sm lni-share mr-2"></i><%=link_to "#{tweet.user} has retweeted...", tweet.tweet_ref , class:"retweet_message"%></small>
+                </div>
+            <%end%>
         <div class="row d-flex align-items-center">
+        
         <!--name user  -->
             <div class="col"><strong><%= tweet.user.name %></strong> 
          <!--follow button  -->   
@@ -23,20 +30,15 @@
             <%end%>
         <!--email user  -->
             <small class="pl-3"><%= tweet.user.email %></small></div>
-        <!--retweet message  -->
-             <div class="col-3 text-center">                 
-             <% if tweet.is_retweet?%>
-                    <small><%=link_to "#{tweet.user} has retweeted...", tweet.tweet_ref%></small>
-            <%end%></div>
-            <div class="col-1 ml-auto">
-            <!--destroy button  -->
-        
 
-             <% if signed_in?%>
-                <%= link_to tweet, method: :delete, data: { confirm: 'Are you sure?' } do %>
-                <span class="delete"><i class="lni lni-sm lni-trash"></i></span>
-                <%end%>
-            <%end%> 
+            <!--destroy button  -->
+            <div class="col-1 ml-auto">
+
+                <% if signed_in?%>
+                    <%= link_to tweet, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                    <span class="delete"><i class="lni lni-sm lni-trash"></i></span>
+                    <%end%>
+                <%end%> 
             </div>
         </div>
 
@@ -45,7 +47,7 @@
             <%= tweet.content.html_safe %>
             </div>
 
-        <div class="row">
+        <div class="row d-flex align-items-center">
         <!--date link  -->
             <div class="col-3 date"><%= link_to tweet do %>
                 <%= time_ago_in_words(tweet.created_at) %>
@@ -57,15 +59,15 @@
                         <% pre_like = tweet.likes.find { |like| like.user_id == current_user.id} %>
                         <% if pre_like %>
                             <%= link_to tweet_like_path(tweet, pre_like), method: :delete do %>
-                            <span><i class="lni lni-heart-filled lleno"></i></span>
+                            <span><i class="lni lni-sm lni-heart-filled lleno"></i></span>
                             <%end%>
                         <% else %>
                             <%= link_to tweet_likes_path(tweet), method: :post do %>
-                            <span><i class="lni lni-heart lleno"></i></span>
+                            <span><i class="lni lni-sm lni-heart lleno"></i></span>
                             <%end%>
                         <% end %>
                     <% else %>
-                    <span><i class="lni lni-heart-filled lleno"></i></span>
+                    <span><i class="lni lni-sm lni-heart-filled lleno"></i></span>
                 <% end %>
             
             
@@ -73,7 +75,7 @@
             <div class="col-3">
             <!--Edit button  -->
                 <%= link_to edit_tweet_path(tweet) do %>
-                <span><i class="lni lni-pencil-alt"></i></span>
+                <span><i class="lni lni-sm lni-pencil-alt"></i></span>
                 <%end%>
 
 
@@ -82,7 +84,7 @@
                 
             <!--retweet button  -->
                 <%= link_to tweet_retweet_path(tweet), method: :post do %>
-                <span><i class="lni lni-share"></i></span><small class="small-2 ml-2"><%= tweet.count_rt %></small>
+                <span><i class="lni lni-sm lni-share"></i></span><small class="small-2 ml-2"><%= tweet.count_rt %></small>
                 <%end%>
                 
             </div>
