--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -11,12 +11,11 @@
     </div>
   <% end %>
 
-  <div class="py-4">
-    <%= form.label :content ,"Contenido"%>
+  <div class="py-4 text-center">
     <%= form.text_area(:content , cols: 29, rows: 5, class:"form-control-edit")%>
   </div>
 
-  <div class="actions">
-    <%= form.submit "Actualizar Tweet", class:"btn btn-blue btn-block mt-3" %>
+  <div class="actions text-center">
+    <%= form.submit "Actualizar Tweet", class:"btn btn-blue mt-3" %>
   </div>
 <% end %>
