--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -9,17 +9,18 @@
 </p>
 
 <p>
-  <label>Usuario:</label>
+  <small>Usuario:</small>
   <%= current_user %>
+  <small class="ml-3 mr-2">Tu post tiene</small><%= @tweet.likes.count %> <%= (@tweet.likes.count) == 1 ? 'Like' : 'Likes'%>
 </p>
 
 
-<p class="date text-blue-dark"><small class="pr-2 date text-blue-dark">Tu post tiene</small><%= @tweet.likes.count %> <%= (@tweet.likes.count) == 1 ? 'Like' : 'Likes'%></p>
 
 <!-- 
 <%= link_to 'Edit', edit_tweet_path(@tweet) %> |
 <%= link_to 'Back', tweets_path %>
 -->
+<hr class="my-4">
 <% if @tweet.likes.count > 0 %>
 <strong> Usuarios que le gusta este tweet</strong>
 <%end%>
